<resources>
    <string name="abdm_error_aadhaar_required">Aadhaar number is required</string>
    <string name="abdm_error_aadhaar_invalid">Enter a valid 12-digit Aadhaar number</string>
    <string name="abdm_error_mobile_required">Mobile number is required</string>
    <string name="abdm_error_mobile_invalid">Enter a valid 10-digit mobile number</string>
    <string name="abdm_error_otp_required">OTP is required</string>
    <string name="abdm_error_otp_invalid">Enter the 6-digit OTP</string>
    <string name="abdm_error_server_unavailable">Service is temporarily unavailable. Please try again.</string>
    <string name="abdm_error_authentication_failed">Authentication failed. Please try again.</string>
    <string name="abdm_error_generic">Something went wrong. Please try again.</string>
    <string name="abdm_card_not_available">ABHA card isn\'t ready yet. Please try again in a moment.</string>
    <string name="max_resend_attempts_exceeded">You have exceeded the max resend attempts. Please wait for 30 minutes before retrying.</string>
    <string name="abdm_error_otp_rate_limited">You have exceeded maximum number of attempts for OTP match in this transaction. Please try again in 30 minutes.</string>
    <string name="entered_aadhaar_or_mobile_number_is_incorrect">Entered Aadhaar or mobile number is incorrect.</string>
    <string name="please_enter_valid_otp">Please enter valid otp</string>
    <string name="abdm_hint_aadhaar_number">Enter your Aadhaar card number</string>
    <string name="abdm_label_agree_terms_conditions"><![CDATA[I agree to the Terms & Conditions]]></string>
    <string name="abdm_title_otp_verification">OTP Verification</string>
    <string name="abdm_subtitle_verify_aadhaar">Verify your Aadhaar card for data security and privacy.</string>
    <string name="abdm_label_otp_sent_to">We will send a one-time OTP to your Aadhaar-linked mobile number.</string>
    <string name="abdm_mobile_otp_sent">Enter the OTP sent to your mobile number %1$s.</string>
    <string name="abdm_label_no_otp_received">Didn\'t receive OTP?</string>
    <string name="abdm_action_resend_otp">Resend</string>
    <string name="abdm_label_resend_in">Resend in %1$d seconds</string>
    <string name="abdm_label_retries_left">Number of retries left: %1$d</string>
    <string name="abdm_hint_mobile_number">Enter mobile number</string>
    <string name="abdm_info_mobile_validation">It is preferable to use your Aadhaar-linked mobile number. If you choose a different mobile number, it will need to be validated again and will be used for all ABHA-related communication.</string>
    <string name="abdm_action_send_otp">Send OTP</string>
    <string name="abdm_action_verify">Verify</string>
    <string name="abdm_action_submit">Submit</string>
    <string name="abdm_content_desc_back">Back</string>
    <string name="abdm_title_patient_name">Patient Name</string>
    <string name="abdm_hint_patient_name">Enter the patient\'s name</string>
    <string name="abdm_error_name_required">Please enter the patient\'s name</string>
    <string name="abdm_action_continue">Continue</string>
    <string name="abdm_loading_sending_otp">Sending OTP…</string>
    <string name="abdm_loading_verifying_otp">Verifying OTP…</string>
    <string name="abdm_loading_submitting">Submitting…</string>
    <string name="abdm_loading_default">Please wait…</string>
    <string name="abdm_loading_checking_user">Checking for existing records…</string>
    <string name="abdm_loading_linking_address">Linking ABHA address…</string>
    <string name="abdm_loading_fetching_profiles">Fetching Profiles…</string>
    <string name="abdm_loading_fetching_profile">Fetching profile…</string>
    <string name="abdm_error_abha_required">Please enter valid ABHA</string>
    <string name="abdm_error_abha_number_invalid">Please enter valid ABHA</string>
    <string name="abdm_error_abha_address_invalid">Please enter valid ABHA address.</string>
    <string name="abdm_error_kyc_pending">This is a non-KYC ABHA address. Please link your ABHA address to your ABHA number to enable download.</string>
    <string name="abdm_error_no_abha_records">No ABHA user records associated with this Mobile No. You will be guided to the Create ABHA screen to create a new record.</string>
    <string name="abdm_error_no_abha_records_aadhaar">No ABHA user records associated with this Aadhaar. You will be guided to the Create ABHA screen to create a new record.</string>
    <string name="abdm_error_invalid_abha">Please enter valid ABHA</string>
    <string name="abdm_error_invalid_aadhaar">Please enter valid AADHAAR</string>
    <string name="abdm_error_mobile_no_match">The mobile number you have entered does not match with any of the records. Please enter a different number.</string>
    <string name="abdm_subtitle_verify">Verify your AADHAAR card or Phone number or ABHA for data security and privacy.</string>
    <string name="abdm_tab_aadhaar_number">AADHAAR number</string>
    <string name="abdm_tab_mobile_number">Mobile Number</string>
    <string name="abdm_tab_abha">ABHA</string>
    <string name="abdm_hint_abha_number">Enter 14 Digit ABHA ID Number</string>
    <string name="abdm_hint_abha_address">Enter ABHA address (e.g. address%1$s)</string>
    <string name="abdm_label_or">Or</string>
    <string name="abdm_action_search_profiles">Search Profiles</string>
    <string name="abdm_otp_type_prompt">Send OTP to phone number linked to</string>
    <string name="abdm_otp_type_aadhaar">AADHAAR</string>
    <string name="abdm_otp_type_mobile">Mobile</string>
    <string name="abdm_action_dialog_continue">Continue</string>
    <string name="abdm_select_abha_account">Please select the ABHA account</string>
    <string name="abdm_account_index">Index: %1$s</string>
    <string name="abdm_account_name">Name: %1$s</string>
    <string name="abdm_account_number">ABHA Number: %1$s</string>
    <string name="abdm_account_gender">Gender: %1$s</string>
    <string name="abdm_account_status_registered">Status: Registered with Intelehealth</string>
    <string name="abdm_account_status_not_registered">Status: Not registered with Intelehealth</string>
    <string name="abdm_compare_title">Compare Data</string>
    <string name="abdm_compare_header_hmis">HMIS Data</string>
    <string name="abdm_compare_header_abha">ABHA Data</string>
    <string name="abdm_field_first_name">First name</string>
    <string name="abdm_field_last_name">Last name</string>
    <string name="abdm_field_dob">DOB</string>
    <string name="abdm_field_gender">Gender</string>
    <string name="abdm_field_address">Address</string>
    <string name="abdm_field_pin_code">Pin Code</string>
    <string name="abdm_field_abha_address">ABHA Address</string>
    <string name="abdm_field_abha_number">ABHA Number</string>
    <string name="abdm_field_phone_number">Phone number</string>
    <string name="abdm_compare_confirm">Confirm and Save Selected Data</string>
    <string name="abdm_compare_save_title">Save Data?</string>
    <string name="abdm_compare_save_message">Do you want to go ahead and save the patient\'s data?</string>
    <string name="abdm_action_save">Save</string>
    <string name="abdm_action_cancel">Cancel</string>
    <string name="abdm_compare_save_failed">Unable to update the patient. Try again later.</string>
    <string name="abdm_not_found">Not Found</string>
    <string name="abdm_title_abha">ABHA</string>
    <string name="do_you_have_an_abha">Do you have an ABHA?</string>
    <string name="abdm_action_create_abha">Create ABHA</string>
    <string name="abdm_action_continue_without_abha">Continue without ABHA</string>
    <string name="abdm_action_yes">Yes</string>
    <string name="abdm_content_desc_icon">Icon</string>
    <string name="select_an_abha_address">Select an ABHA Address</string>
    <string name="please_select_an_abha_address_from_the_suggestions_below">*Please select an ABHA address from the suggestions below.</string>
    <string name="abha_address">ABHA Address</string>
    <string name="submit">Submit</string>
    <string name="please_select_abha_address">Please select ABHA address.</string>
    <string name="length_validation">ABHA address must be at least 8 characters long and cannot be longer than 18 characters.</string>
    <string name="characters_validation">ABHA address can only contain letters, numbers, one dot (.) and/or one underscore (_).</string>
    <string name="special_characters_position_validation">Dot (.) or underscore (_) must be in the middle, not at the beginning or end.</string>
    <string name="special_characters_count_validation">Only one dot (.) and/or one underscore (_) is allowed in the ABHA address.</string>
    <string name="abha_address_suffix_not_allowed_validation">Abha addresses should not end with the suffix(%1$s).</string>
    <string name="please_click_on_submit_button_to_proceed">Please click on submit button to proceed.</string>
    <string name="abdm_error_abha_address_exists">This ABHA address already exists, please use a different one.</string>
    <string name="abdm_error_abha_address_link_failed">The ABHA address was created but could not be linked to this patient. Please go back and try again.</string>
    <string name="you_have_an_existing_abha_address_present">You have existing ABHA address(es) present. Please select the ABHA address that you would like to proceed with or click on Create New to create a new ABHA address.</string>
    <string name="proceed">Proceed</string>
    <string name="create_new">Create New</string>
    <string name="preferred_icon_text">P</string>
    <string name="please_select_an_abha_address_before_proceeding">Please select an ABHA address before proceeding.</string>
    <string name="you_have_more_than_six_abha_addresses_error">A maximum of 6 ABHA addresses are allowed. Please select an ABHA address from the list above.</string>
    <string name="abdm_loading_fetching_suggestions">Fetching Suggestions…</string>
    <string name="abha_consent">ABHA Consent</string>
    <string name="abdm_consent">I, hereby declare that I am voluntarily sharing my Aadhaar Number and demographic information issued by UIDAI, with National Health Authority (NHA) for the sole purpose of creation of ABHA number . \n\nI understand that my ABHA number can be used and shared for purposes as may be notified by ABDM from time to time including provision of healthcare services. Further, I am aware that my personal identifiable information (Name, Address, Age, Date of Birth, Gender and Photograph) may be made available to the entities working in the National Digital Health Ecosystem (NDHE) which inter alia includes stakeholders and entities such as healthcare professionals (e.g. doctors), facilities (e.g. hospitals, laboratories) and data fiduciaries (e.g. health programmes), which are registered with or linked to the Ayushman Bharat Digital Mission (ABDM), and various processes there under. \n\nI authorize NHA to use my Aadhaar number for performing Aadhaar based authentication with UIDAI as per the provisions of the AADHAAR (Targeted Delivery of Financial and other Subsidies, Benefits and Services) Act, 2016 for the aforesaid purpose. I understand that UIDAI will share my e-KYC details, or response of “Yes” with NHA upon successful authentication. \n\nI have been duly informed about the option of using other IDs apart from AADHAAR; however, I consciously choose to use AADHAAR number for the purpose of availing benefits across the NDHE. I am aware that my personal identifiable information excluding AADHAAR number / VID number can be used and shared for purposes as mentioned above. \n\nI reserve the right to revoke the given consent at any point of time as per provisions of AADHAAR Act and Regulations.</string>
    <string name="decline">Decline</string>
    <string name="accept_new">Accept</string>
    <string name="i_hereby_declare_that">I hereby declare that:</string>
</resources>