<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="@dimen/margin_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_24">

        <ImageView
            android:id="@+id/dialog_icon"
            android:layout_width="@dimen/margin_64"
            android:layout_height="@dimen/margin_64"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/abdm_content_desc_icon"
            android:src="@drawable/ic_complete" />

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="4sp"
            android:text="@string/abdm_title_abha"
            android:textAppearance="@style/dialog_title"
            android:textColor="@null"
            android:textSize="@null"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:gravity="center"
            android:lineSpacingExtra="3sp"
            android:text="@string/do_you_have_an_abha"
            android:textAppearance="@style/dialog_subtitle"
            android:textColor="@null"
            android:textSize="@null" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_yes_abha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@color/brand_primary"
            android:gravity="center"
            android:paddingHorizontal="@dimen/margin_32"
            android:paddingVertical="@dimen/margin_10"
            android:text="@string/abdm_action_yes"
            android:textColor="@color/grey_button"
            android:textSize="@dimen/text_14"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:backgroundTintMode="src_over" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create_abha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_12"
            android:background="@color/grey_button"
            android:gravity="center"
            android:paddingHorizontal="@dimen/margin_32"
            android:paddingVertical="@dimen/margin_10"
            android:text="@string/abdm_action_create_abha"
            android:textColor="@color/brand_primary"
            android:textSize="@dimen/text_14"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:backgroundTintMode="src_over" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue_without_abha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_button"
            android:gravity="center"
            android:paddingHorizontal="@dimen/margin_32"
            android:paddingVertical="@dimen/margin_10"
            android:text="@string/abdm_action_continue_without_abha"
            android:textColor="@color/brand_primary"
            android:textSize="@dimen/text_14"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:backgroundTintMode="src_over" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
