<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/margin_16"
    app:cardElevation="@dimen/margin_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_24">

        <ImageView
            android:id="@+id/iv_dialog_icon"
            android:layout_width="@dimen/margin_64"
            android:layout_height="@dimen/margin_64"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_16"
            android:contentDescription="@string/abdm_content_desc_icon"
            android:src="@drawable/abdm_ic_alert" />

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/abdm_title_patient_name"
            android:textAppearance="@style/TextAppearance.Abdm.Title" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_patient_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_textbox_outline"
                android:hint="@string/abdm_hint_patient_name"
                android:imeOptions="actionDone"
                android:inputType="textPersonName|textCapWords"
                android:padding="14dp"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.Abdm.InputField"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_name_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:textAppearance="@style/TextAppearance.Abdm.ErrorMessage"
            android:visibility="gone"
            tools:text="@string/abdm_error_name_required"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/abdm_action_continue"
            android:textColor="@color/white"
            app:backgroundTint="@color/brand_primary"
            app:cornerRadius="@dimen/margin_8" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
