<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--toolbar-->
    <LinearLayout
        android:id="@+id/ll_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginStart="@dimen/margin_24"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:text="@string/abha_consent"
            android:textColor="@color/text_heading"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />
    </LinearLayout>
    <!--toolbar end-->

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvAbhaConsent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_button_privacy"
        android:layout_below="@+id/ll_action_bar"
        android:layout_marginHorizontal="@dimen/margin_24"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoLink="web"
            android:fontFamily="@font/lato_regular"
            android:justificationMode="inter_word"
            android:text="@string/abdm_consent"
            android:textSize="@dimen/text_14" />

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tvAbhaContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_action_bar"
        android:layout_marginHorizontal="@dimen/margin_12"
        android:layout_marginBottom="@dimen/margin_5"
        android:fontFamily="@font/lato_regular"
        android:justificationMode="inter_word"
        android:text="@string/i_hereby_declare_that" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAbhaConsent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_button_privacy"
        android:layout_below="@+id/tvAbhaContent"
        android:layout_marginHorizontal="@dimen/margin_12"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/layout_consent_checkbox" />

    <LinearLayout
        android:id="@+id/layout_button_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.widget.Button
            android:id="@+id/btnDecline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_5"
            android:layout_weight="1"
            android:background="@drawable/abdm_bg_button_outline"
            android:padding="@dimen/margin_13"
            android:text="@string/decline"
            android:textColor="@color/brand_primary"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

        <android.widget.Button
            android:id="@+id/btn_accept_privacy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_5"
            android:layout_weight="1"
            android:background="@drawable/abdm_bg_button_accept_state"
            android:enabled="false"
            android:padding="@dimen/margin_13"
            android:text="@string/accept_new"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16" />

    </LinearLayout>

</RelativeLayout>
