<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_20"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_aadhaar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        app:endIconMode="none"
        app:hintEnabled="false"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_aadhaar_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_textbox_outline"
            android:hint="@string/abdm_hint_aadhaar_number"
            android:imeOptions="actionNext"
            android:inputType="numberPassword"
            android:maxLength="12"
            android:padding="14dp"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.Abdm.InputField"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_aadhaar_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/margin_8"
        android:textAppearance="@style/TextAppearance.Abdm.ErrorMessage"
        android:visibility="gone"
        tools:text="@string/abdm_error_aadhaar_invalid"
        tools:visibility="visible" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cb_terms_and_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/abdm_label_agree_terms_conditions"
        android:textColor="@color/primary_text"
        app:buttonTint="@color/brand_primary" />

</LinearLayout>
